namespace java com.heepay.rpc.billing.service
include "SettleChannelManagerModel.thrift"

service SettleChannelManagerService {
	
	void query();
}